--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#5A5A5A</color>
     <color name="brightGray">#888887</color>
+    <color name="invalid">#dcdcdc</color>
 </resources>
