--- a/app/src/main/res/layout/activity_short_ad.xml
+++ b/app/src/main/res/layout/activity_short_ad.xml
@@ -13,6 +13,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/nav_img"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:scaleType="centerInside"
@@ -46,6 +47,18 @@
                 android:singleLine="true"
                 android:id="@+id/nav_price"
                 android:text="price"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:id="@+id/nav_year"
+                android:text="year"
                 />
 
             <LinearLayout
