--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -16,6 +16,7 @@
         android:minHeight="30dp"
         android:padding="13dp"
         android:text="Vardas"
+        android:gravity="center"
         android:textColor="@color/black"
         android:background="@drawable/edittext_background"
         android:layout_marginTop="45dp"
@@ -37,6 +38,8 @@
         android:padding="13dp"
         android:layout_marginTop="45dp"
         android:text="Slaptažodis"
+        android:gravity="center"
+        android:textColor="@color/black"
         android:background="@drawable/edittext_background"
         app:layout_constraintEnd_toEndOf ="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,16 +48,18 @@
 
     <TextView
         android:id="@+id/emaill"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="277dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="45dp"
+        android:background="@drawable/edittext_background"
         android:elevation="3dp"
         android:ems="10"
         android:minHeight="30dp"
         android:padding="13dp"
-        android:background="@drawable/edittext_background"
         android:text="Paštas"
-        android:layout_marginTop="45dp"
-        app:layout_constraintEnd_toEndOf ="parent"
+        android:gravity="center"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordd" />
 
@@ -68,6 +73,8 @@
         android:minHeight="30dp"
         android:padding="13dp"
         android:text="Pavardė"
+        android:gravity="center"
+        android:textColor="@color/black"
         android:layout_marginTop="45dp"
         app:layout_constraintEnd_toEndOf ="parent"
         app:layout_constraintStart_toStartOf="parent"
