--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -48,8 +48,8 @@
 
     <TextView
         android:id="@+id/emaill"
-        android:layout_width="277dp"
-        android:layout_height="47dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
         android:background="@drawable/edittext_background"
         android:elevation="3dp"
@@ -86,6 +86,7 @@
         android:layout_height="wrap_content"
         android:elevation="3dp"
         android:ems="10"
+        android:gravity="center"
         android:minHeight="30dp"
         android:padding="10dp"
         android:text="Vardas"
