--- a/app/src/main/res/layout/activity_full_ad.xml
+++ b/app/src/main/res/layout/activity_full_ad.xml
@@ -298,6 +298,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="Cia bus aprasymas"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view3" />
