--- a/app/src/main/res/layout/activity_full_ad.xml
+++ b/app/src/main/res/layout/activity_full_ad.xml
@@ -59,9 +59,10 @@
         android:id="@+id/view3"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="48dp"
         android:background="@color/teal_700"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view2" />
 
@@ -237,6 +238,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Darbinis plotis (m):"
+        android:textSize="16dp"
         android:textColor="@color/brightGray"
         app:layout_constraintStart_toEndOf="@+id/plotisimg"
         app:layout_constraintTop_toBottomOf="@+id/view2" />
@@ -248,6 +250,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="8dp"
         android:text="7,7"
+        android:textSize="16dp"
         app:layout_constraintStart_toEndOf="@+id/plotisdarbo"
         app:layout_constraintTop_toBottomOf="@+id/view2" />
 
@@ -266,9 +269,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="84dp"
+        android:layout_marginEnd="60dp"
         android:text="Motovalandos:"
         android:textColor="@color/brightGray"
+        android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view2" />
 
@@ -279,6 +283,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="8dp"
         android:text="696"
+        android:textSize="16dp"
         app:layout_constraintStart_toEndOf="@+id/darbolaiko_txt"
         app:layout_constraintTop_toBottomOf="@+id/view2" />
 
@@ -287,6 +292,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Aprašymas"
+        android:textSize="16dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view3"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintStart_toStartOf="parent"
@@ -298,6 +305,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="Cia bus aprasymas"
+        android:textSize="16dp"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
