--- a/app/src/main/res/layout/activity_short_ad.xml
+++ b/app/src/main/res/layout/activity_short_ad.xml
@@ -10,14 +10,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@drawable/border">
 
         <ImageView
             android:id="@+id/nav_img"
+            android:layout_marginTop="12dp"
+            android:layout_marginStart="12dp"
             android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:scaleType="centerInside"
-            android:src='@drawable/key'/>
+            android:layout_height="156dp"
+            android:scaleType="centerCrop"
+            android:src='@drawable/key'
+            android:background="@color/teal_200"
+            android:padding="2dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,13 +33,23 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:id="@+id/nav_name"
-                android:text="Name" />
+                android:text="Name"
+                android:textColor="@color/teal_200"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/teal_700"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -47,7 +62,16 @@
                 android:singleLine="true"
                 android:id="@+id/nav_price"
                 android:text="price"
+                android:textColor="@color/teal_700"
                 />
+
+            <View
+                android:layout_width="200dp"
+                android:layout_height="2dp"
+                android:background="@color/brightGray"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -60,20 +84,28 @@
                 android:id="@+id/nav_year"
                 android:text="year"
                 />
+            <View
+                android:layout_width="150dp"
+                android:layout_height="2dp"
+                android:background="@color/gray"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_menu_slideshow"
-                    android:layout_marginTop="40dp"
-                    android:layout_marginLeft="180dp"/>
-            </LinearLayout>
-
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="55dp"
+                    android:layout_marginBottom="20dp"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:text="Peržiūrėti..."
+                    android:textColor="@color/teal_200"
+                    />
         </LinearLayout>
 
     </LinearLayout>
