Sudėta surinkta informacija apie kombainus į skelbimus. Sukoduota, kad skelbimai matytusi pagrindiniame puslapyje. Pašalintas neveikiantis menu mygtukas kairėje.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,4 +18,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/mainminiskelb"
+        android:layout_width="377dp"
+        android:layout_height="562dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="188dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
