--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -6,6 +6,50 @@
     android:layout_height="match_parent"
     tools:context=".ChangePassword">
 
+    <ImageView
+        android:id="@+id/skaicius_img3"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="100dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/didzioji_img4"
+        app:srcCompat="@mipmap/check"
+        app:tint="@color/brightGray" />
+
+    <TextView
+        android:id="@+id/skaicius_txt3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nors 1 skaičius"
+        android:textColor="@color/brightGray"
+        android:layout_marginStart="5dp"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@+id/skaicius_img3"
+        app:layout_constraintTop_toTopOf="@+id/skaicius_img3" />
+
+    <ImageView
+        android:id="@+id/raides8_img4"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/naujas"
+        app:srcCompat="@mipmap/check"
+        app:tint="@color/brightGray" />
+
+    <TextView
+        android:id="@+id/raides8_txt4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:text="Nors 8 simboliai"
+        android:textColor="@color/brightGray"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@+id/raides8_img4"
+        app:layout_constraintTop_toTopOf="@+id/raides8_img4" />
+
     <TextView
         android:id="@+id/pakeitimas"
         android:layout_width="wrap_content"
@@ -25,6 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="39dp"
         android:hint="Senas slaptažodis"
+        android:textColor="@color/black"
         android:inputType="textPassword"
         android:background="@drawable/edittext_background"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,6 +89,7 @@
         android:elevation="3dp"
         android:ems="10"
         android:hint="Naujas slaptažodis"
+        android:textColor="@color/black"
         android:inputType="textPassword"
         android:minHeight="30dp"
         android:padding="13dp"
@@ -56,13 +102,35 @@
         android:id="@+id/changeBut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:background="@drawable/edittext_background"
         android:text="Pakeisti slaptažodį"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/naujas" />
+        app:layout_constraintTop_toBottomOf="@+id/skaicius_txt3" />
+
+    <TextView
+        android:id="@+id/didzioji_txt5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nors 1 didžioji raidė"
+        android:textColor="@color/brightGray"
+        android:layout_marginStart="5dp"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@+id/didzioji_img4"
+        app:layout_constraintTop_toTopOf="@+id/didzioji_img4" />
+
+    <ImageView
+        android:id="@+id/didzioji_img4"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="100dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/raides8_img4"
+        app:srcCompat="@mipmap/check"
+        app:tint="@color/brightGray" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
