--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -6,6 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".Account">
 
+    <Button
+        android:id="@+id/buttonChange2"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/edittext_background"
+        android:backgroundTint="#FF009688"
+        android:text="Pakeisti el. paštą"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonChangePass" />
+
     <TextView
 
         android:id="@+id/namee"
@@ -142,8 +156,8 @@
         app:layout_constraintBottom_toTopOf="@+id/emaill"/>
 
     <Button
-        android:id="@+id/buttonReg"
-        android:layout_width="wrap_content"
+        android:id="@+id/buttonChangePass"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:backgroundTint="#FF009688"
         android:text="Pakeisti slaptažodį"
