--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -22,8 +22,8 @@
         android:id="@+id/mainminiskelb"
         android:layout_width="377dp"
         android:layout_height="562dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="188dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
