Giedrius, pamirsti papushinti dalykai

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="gray">#5A5A5A</color>
     <color name="brightGray">#888887</color>
     <color name="invalid">#dcdcdc</color>
+    <color name="liladd">#dcdcdc</color>
 </resources>
