--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -7,7 +7,7 @@
     </item>
     <item  android:top="2dp" android:bottom="2dp">
         <shape android:shape="rectangle">
-            <solid android:color="#424242" />
+            <solid android:color="@color/liladd" />
         </shape>
     </item>
 </layer-list>
