--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -33,7 +33,7 @@
         android:id="@+id/imageView7"
         android:layout_width="422dp"
         android:layout_height="197dp"
-        app:srcCompat="@mipmap/didysis_jhonis" />
+        app:srcCompat="@mipmap/titulinis2" />
 
     <View
         android:id="@+id/divider7"
