--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -25,57 +25,35 @@
         android:id="@+id/namee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/edittext_background"
         android:elevation="3dp"
         android:ems="12"
+        android:gravity="center"
         android:minHeight="30dp"
         android:padding="13dp"
         android:text="Vardas"
-        android:gravity="center"
         android:textColor="@color/black"
-        android:background="@drawable/edittext_background"
-        android:layout_marginTop="45dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-
-        />
-
-    <TextView
-        android:id="@+id/passwordd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:elevation="3dp"
-        android:ems="12"
-        android:minHeight="30dp"
-        android:padding="13dp"
-        android:layout_marginTop="45dp"
-        android:text="Slaptažodis"
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:background="@drawable/edittext_background"
-        app:layout_constraintEnd_toEndOf ="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/snamee"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
     <TextView
         android:id="@+id/emaill"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
+
         android:background="@drawable/edittext_background"
         android:elevation="3dp"
         android:ems="12"
+        android:gravity="center"
         android:minHeight="30dp"
         android:padding="13dp"
         android:text="Paštas"
-        android:gravity="center"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordd" />
+        app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
     <TextView
         android:id="@+id/snamee"
@@ -98,6 +76,7 @@
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
         android:elevation="3dp"
         android:ems="10"
         android:gravity="center"
@@ -107,6 +86,7 @@
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -126,46 +106,72 @@
         app:layout_constraintBottom_toTopOf="@+id/snamee"/>
 
     <TextView
-        android:id="@+id/textView17"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:elevation="3dp"
-        android:ems="10"
-        android:minHeight="30dp"
-        android:textStyle="bold"
-        android:padding="10dp"
-        android:textAlignment="center"
-        android:text="Slaptažodis"
-        app:layout_constraintEnd_toEndOf ="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/passwordd"/>
-
-    <TextView
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:elevation="3dp"
-        android:textStyle="bold"
         android:ems="10"
         android:minHeight="30dp"
         android:padding="10dp"
-        android:textAlignment="center"
         android:text="Elektroninis paštas"
-        app:layout_constraintEnd_toEndOf ="parent"
+        android:textAlignment="center"
+        android:textStyle="bold"
+
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/emaill"/>
+        app:layout_constraintTop_toBottomOf="@+id/snamee" />
 
     <Button
         android:id="@+id/buttonChangePass"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:background="@drawable/edittext_background"
         android:backgroundTint="#FF009688"
         android:text="Pakeisti slaptažodį"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/edittext_background"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emaill"
-        android:textColor="@color/black"
-        android:layout_marginTop="45dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/emaill" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Paskyros informacija"
+        android:textSize="24dp"
+        android:textStyle="bold"
+        android:textColor="@color/teal_700"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <View
+        android:layout_width="400dp"
+        android:layout_height="2dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/teal_700"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+
+    <View
+        android:layout_width="400dp"
+        android:layout_height="2dp"
+        android:layout_marginTop="-10dp"
+        android:background="@color/teal_700"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView12" />
+
+    <View
+        android:layout_width="200dp"
+        android:layout_height="2dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/teal_700"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView12" />
 </androidx.constraintlayout.widget.ConstraintLayout>
