--- a/app/src/main/res/layout/activity_short_ad2.xml
+++ b/app/src/main/res/layout/activity_short_ad2.xml
@@ -6,12 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".short_ad_activity">
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchVie"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:background="@drawable/search_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:queryHint="Paieška"
+        app:iconifiedByDefault="false"
+
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/view_all_rec"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/searchVie" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
