--- a/app/src/main/res/layout/activity_full_ad.xml
+++ b/app/src/main/res/layout/activity_full_ad.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".full_ad">
+    tools:context=".full_ad"
+    >
 
     <ImageView
         android:id="@+id/pagrindine_foto"
