--- a/app/src/main/res/layout/activity_change_email.xml
+++ b/app/src/main/res/layout/activity_change_email.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChangeEmail">
+    tools:context=".ChangeEmail"
+    android:background="@drawable/backgradient">
 
     <EditText
         android:id="@+id/senasE"
