--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="brightGray">#888887</color>
     <color name="invalid">#dcdcdc</color>
     <color name="liladd">#dcdcdc</color>
+    <color name="borderuwu">#FF000000</color>
 </resources>
