--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="liladd">#424242</color>
-    <color name="borderuwu">#FF018786</color>
+    <color name="borderowo">#FF018786</color>
 </resources>
