--- a/app/src/main/res/layout/activity_full_ad.xml
+++ b/app/src/main/res/layout/activity_full_ad.xml
@@ -68,6 +68,7 @@
         app:layout_constraintTop_toTopOf="@+id/view2" />
 
     <View
+        android:id="@+id/view4"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="@color/teal_700"
@@ -311,5 +312,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view3" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginEnd="15dp"
+        app:tint="@color/teal_700"
+        app:layout_constraintBottom_toTopOf="@+id/pagrindine_foto"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view4"
+        app:srcCompat="@mipmap/cart" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
